add comment on git installation

--- a/notebooks/FAQ/WorkingEnv.ipynb
+++ b/notebooks/FAQ/WorkingEnv.ipynb
@@ -345,6 +345,26 @@
     "\n",
     "To see everything you just installed, type `conda list`"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Install git\n",
+    "Finally, make sure [git](https://en.wikipedia.org/wiki/Git) is installed.<br>\n",
+    "We will use git throughout the semester to distribute examples and to facilitate teamwork on the exercises.\n",
+    "\n",
+    "Type `which git` on your command line.  If the `git` command is not found, you can install either by:\n",
+    "* Using the packaging tools for your OS distrinution.  For example ,see this [guide](https://gist.github.com/derhuerst/1b15ff4652a867391f03)\n",
+    "* Just add it to your conda environment using `conda install git`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -364,7 +384,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.8"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
