--- a/notebooks/FAQ/VirtualBoxGuide.ipynb
+++ b/notebooks/FAQ/VirtualBoxGuide.ipynb
@@ -102,7 +102,7 @@
     "So now you've jumped into the deep end and have become a [sysadmin](https://xkcd.com/705/), congratulations/condolences* ;^)  Good luck!\n",
     "\n",
     "* Depending on the version of Ubuntu you installed, you may be prompted to upgrade the distribution.  This is OK, if you choose to do so.\n",
-    "* You will probaby want to create a new user, unless you like the name *osboxes* and it's ALWAYS good practice to change tge default passwords on anything that you manage!\n",
+    "* You will probaby want to create a new user, unless you like the name *osboxes* and it's ALWAYS good practice to change the default passwords on your accounts!\n",
     "* To setup the tools used in the phys56xx courses, use conda as described in the Working Environment guide.\n",
     "\n",
     "\\* Problems?  \"You may do all your exercises on Rivanna instead.”  You can also take this as a challenge to pick up some new skills.  Go ahead and post your questions on our piazza group and share your discoveries as well. "
@@ -125,7 +125,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.8"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
