--- a/notebooks/FAQ/WorkingEnv.ipynb
+++ b/notebooks/FAQ/WorkingEnv.ipynb
@@ -318,10 +318,10 @@
     "\n",
     "**Make sure that your phys56xx environment is active before you enter the following commands**\n",
     "```bash\n",
-    "# install some commone python packages\n",
+    "# install some common python packages\n",
     "conda install --yes scipy matplotlib seaborn sympy scikit-learn\n",
     "# install a jit python compiler and the ROOT analysis framework\n",
-    "# n.b. installing ROOT alsos brings in a compatible C++ compiler and libs\n",
+    "# n.b. installing ROOT also brings in a compatible C++ compiler and libs\n",
     "conda install --yes numba root\n",
     "```"
    ]
@@ -358,13 +358,6 @@
     "* Using the packaging tools for your OS distrinution.  For example ,see this [guide](https://gist.github.com/derhuerst/1b15ff4652a867391f03)\n",
     "* Just add it to your conda environment using `conda install git`"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
