--- a/notebooks/FAQ/WorkingEnv.ipynb
+++ b/notebooks/FAQ/WorkingEnv.ipynb
@@ -323,6 +323,8 @@
     "# install a jit python compiler and the ROOT analysis framework\n",
     "# n.b. installing ROOT also brings in a compatible C++ compiler and libs\n",
     "conda install --yes numba root\n",
+    "#optionally\n",
+    "conda install --yes gnuplot jupyterlab\n",
     "```"
    ]
   },
