--- a/notebooks/FAQ/WorkingEnv.ipynb
+++ b/notebooks/FAQ/WorkingEnv.ipynb
@@ -76,9 +76,9 @@
     "\n",
     "You may also need to install software that is not even compatible with the current packages in your distribution. \n",
     "\n",
-    "For example, it's entirely possible that you'll eventually need some important software for your work that turns out to be incompatible with the bleeding edge compiler installed on your laptop or with the default and somewhat ancient compiler installed the large computer cluster you will use.   \n",
+    "For example, it's entirely possible that you'll eventually need some important software for your work that turns out to be incompatible with the bleeding edge compiler installed on your laptop or with the default and somewhat ancient compiler installed on the large computer cluster you will use.   \n",
     "\n",
-    "In cases like this it can be very difficult to manage the full set dependencies which typically include alternate copies of libraries, compilers, etc.  "
+    "<font color=blue>In cases like this it can be very difficult to manage the full set of dependencies which typically include alternate copies of libraries, compilers, etc.</font>  "
    ]
   },
   {
@@ -91,7 +91,7 @@
    "source": [
     "This problem can be solved in a variety of ways, including:\n",
     "* the use of virtual machines and various containiers which package up a whole OS or parts of one to define your computing environment.  \n",
-    "* another option is to a use distributed filesystem to provide collections of programs and libraries which can be used to configure a particular environment.  \n",
+    "* another option is to use alternate *root* environments maybe even on a distributed filesystem to provide collections of programs and libraries which can be used to ensure a consistent configuration.  \n",
     "\n",
     "However, some these options may not be available to use on systems that you can't personally manage and even if you do have [root access](https://xkcd.com/149/), the learning curve and time involved may be [discouraging](https://xkcd.com/349/).  Fortunately, numerous solutions exist for this common problem."
    ]
@@ -350,14 +350,18 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "# Install git\n",
-    "Finally, make sure [git](https://en.wikipedia.org/wiki/Git) is installed.<br>\n",
+    "Finally, make sure [ git](https://en.wikipedia.org/wiki/Git) is installed.<br>\n",
     "We will use git throughout the semester to distribute examples and to facilitate teamwork on the exercises.\n",
     "\n",
     "Type `which git` on your command line.  If the `git` command is not found, you can install either by:\n",
-    "* Using the packaging tools for your OS distrinution.  For example ,see this [guide](https://gist.github.com/derhuerst/1b15ff4652a867391f03)\n",
+    "* Using the packaging tools for your OS distrinution.  For example, see this [guide](https://gist.github.com/derhuerst/1b15ff4652a867391f03)\n",
     "* Just add it to your conda environment using `conda install git`"
    ]
   }
