--- a/notebooks/FAQ/WorkingEnv.ipynb
+++ b/notebooks/FAQ/WorkingEnv.ipynb
@@ -324,7 +324,7 @@
     "# n.b. installing ROOT also brings in a compatible C++ compiler and libs\n",
     "conda install --yes numba root\n",
     "#optionally\n",
-    "conda install --yes gnuplot jupyterlab\n",
+    "conda install --yes jupyterlab\n",
     "```"
    ]
   },
