--- a/notebooks/FAQ/WorkingEnv.ipynb
+++ b/notebooks/FAQ/WorkingEnv.ipynb
@@ -322,7 +322,7 @@
     "conda install --yes scipy matplotlib seaborn sympy scikit-learn\n",
     "# install a jit python compiler and the ROOT analysis framework\n",
     "# n.b. installing ROOT also brings in a compatible C++ compiler and libs\n",
-    "conda install --yes numba root\n",
+    "conda install --yes numba root gsl\n",
     "#optionally\n",
     "conda install --yes jupyterlab\n",
     "```"
