fix repeated installs, add ffmpeg option

--- a/notebooks/FAQ/WorkingEnv.ipynb
+++ b/notebooks/FAQ/WorkingEnv.ipynb
@@ -326,8 +326,7 @@
     "# n.b. installing ROOT also brings in a compatible C++ compiler and libs\n",
     "conda install --yes numba root gsl\n",
     "#optionally\n",
-    "conda install --yes numba root\n",
-    "conda install --yes jupyterlab\n",
+    "conda install --yes jupyterlab ffmpeg\n",
     "```"
    ]
   },
@@ -386,7 +385,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
