--- a/notebooks/FAQ/WorkingEnv.ipynb
+++ b/notebooks/FAQ/WorkingEnv.ipynb
@@ -187,7 +187,7 @@
     "\n",
     "They *should* work on recent MacOS systems and will not work on Windows.  Go ahead and explore whay you can do natively on MacOS and Windows, but these will not be 'officially supported' in the class.\n",
     "* MacOS note: While the instructions are known to work on Intel-based Macs, we have no information at this time about the new ARM-based Mac systems.\n",
-    "* Windows note:  The Linux installation is know to work using WLSv2 (and, for example, a receent Ubuntu installation).  You will also need to install the Xming and Xming-fonts pakages for full functionality."
+    "* Windows note:  The Linux installation is known to work using WLSv2 (and, for example, a receent Ubuntu installation).  You will also need to install the Xming and Xming-fonts pakages for full functionality."
    ]
   },
   {
