--- a/notebooks/FAQ/WorkingEnv.ipynb
+++ b/notebooks/FAQ/WorkingEnv.ipynb
@@ -305,7 +305,7 @@
     "# to deactivate the environment use\n",
     "conda deactivate\n",
     "```\n",
-    "Note: you will have to `activate phys56xx` each time you log in or open a  new shell to start working.  Therefore you may want to add the line `activate phys56xx` to the end of your `.bashrc` file."
+    "Note: you will need to execute `conda activate phys56xx` each time you log in or open a new shell to start working.  **Do not place `conda activate phys56xx` to the end of your `.bashrc` file on Rivanna.  This will **"
    ]
   },
   {
@@ -322,10 +322,10 @@
     "```bash\n",
     "# install some common python packages\n",
     "conda install --yes scipy matplotlib seaborn sympy scikit-learn\n",
-    "# install a jit python compiler and the ROOT analysis framework\n",
+    "# install a jit python compiler, the ROOT analysis framework, and gnu scientific library\n",
     "# n.b. installing ROOT also brings in a compatible C++ compiler and libs\n",
     "conda install --yes numba root gsl\n",
-    "#optionally\n",
+    "# optionally\n",
     "conda install --yes jupyterlab ffmpeg\n",
     "```"
    ]
@@ -342,7 +342,7 @@
     "----\n",
     "With the envirnment set up, your prompt should like something like<br>\n",
     "`(phys56xx) [rjh2j ~]$`<br>\n",
-    "Within this environment your paths will be defined to access the programs and libraries you installed above. Try the following commands to see that you are not using your installed packahes and are not relying on the Rivanna's defaults:\n",
+    "Within this environment your paths will be defined to access the programs and libraries you installed above. Try the following commands to see that you are not using your installed packages and are not relying on the Rivanna's defaults:\n",
     "* `printenv | grep miniconda3`\n",
     "* `which python`\n",
     "* `which g++`\n",
@@ -371,7 +371,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -385,7 +385,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
