--- a/notebooks/FAQ/WorkingEnv.ipynb
+++ b/notebooks/FAQ/WorkingEnv.ipynb
@@ -305,7 +305,7 @@
     "# to deactivate the environment use\n",
     "conda deactivate\n",
     "```\n",
-    "Note: you will need to execute `conda activate phys56xx` each time you log in or open a new shell to start working.  **Do not place `conda activate phys56xx` to the end of your `.bashrc` file on Rivanna.  This can cause problems initiating the system**"
+    "Note: you will need to execute `conda activate phys56xx` each time you log in or open a new shell to start working.   **Do not place ** `conda activate phys56xx` ** at the end of your `.bashrc` file on Rivanna.  This can cause problems with the initializing the default system tools. **"
    ]
   },
   {
