--- a/notebooks/FAQ/WorkingEnv.ipynb
+++ b/notebooks/FAQ/WorkingEnv.ipynb
@@ -305,7 +305,8 @@
     "# to deactivate the environment use\n",
     "conda deactivate\n",
     "```\n",
-    "Note: you will need to execute `conda activate phys56xx` each time you log in or open a new shell to start working.   **Do not place ** `conda activate phys56xx` ** at the end of your `.bashrc` file on Rivanna.  This can cause problems with the initializing the default system tools. **"
+    "\n",
+    "Note: you will need to execute `conda activate phys56xx` each time you log in or open a new shell to start working.   Do not place `conda activate phys56xx` at the end of your `.bashrc` file on Rivanna.  This can cause problems with the initializing the default system tools."
    ]
   },
   {
@@ -335,14 +336,15 @@
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
-    }
+    },
+    "tags": []
    },
    "source": [
     "Looking over your environment\n",
     "----\n",
     "With the envirnment set up, your prompt should like something like<br>\n",
     "`(phys56xx) [rjh2j ~]$`<br>\n",
-    "Within this environment your paths will be defined to access the programs and libraries you installed above. Try the following commands to see that you are not using your installed packages and are not relying on the Rivanna's defaults:\n",
+    "Within this environment your paths will be defined to access the programs and libraries you installed above. Try the following commands to see that you are not using your installed packages and are not relying on the Rivanna defaults:\n",
     "* `printenv | grep miniconda3`\n",
     "* `which python`\n",
     "* `which g++`\n",
