--- a/notebooks/FAQ/WorkingEnv.ipynb
+++ b/notebooks/FAQ/WorkingEnv.ipynb
@@ -327,7 +327,7 @@
     "# n.b. installing ROOT also brings in a compatible C++ compiler and libs\n",
     "conda install --yes numba root gsl\n",
     "# optionally\n",
-    "conda install --yes jupyterlab ffmpeg\n",
+    "conda install --yes jupyterlab ffmpeg gnuplot\n",
     "```"
    ]
   },
@@ -373,9 +373,9 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "P56xx Env",
    "language": "python",
-   "name": "python3"
+   "name": "p56xx"
   },
   "language_info": {
    "codemirror_mode": {
@@ -387,7 +387,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
