--- a/notebooks/FAQ/WorkingEnv.ipynb
+++ b/notebooks/FAQ/WorkingEnv.ipynb
@@ -284,7 +284,7 @@
    "source": [
     "5) Create an environment\n",
     "```bash\n",
-    "conda create -n phys56xx\n",
+    "conda create -n phys56xx python=3.9\n",
     "```"
    ]
   },
@@ -373,9 +373,9 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "P56xx Env",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "p56xx"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -387,7 +387,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
