--- a/notebooks/FAQ/WorkingEnv.ipynb
+++ b/notebooks/FAQ/WorkingEnv.ipynb
@@ -328,6 +328,7 @@
     "conda install --yes numba root gsl\n",
     "# optionally\n",
     "conda install --yes jupyterlab ffmpeg gnuplot\n",
+    "conda install --yes geant4 cmake\n",
     "```"
    ]
   },
@@ -373,7 +374,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -387,7 +388,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
