--- a/notebooks/FAQ/WorkingEnv.ipynb
+++ b/notebooks/FAQ/WorkingEnv.ipynb
@@ -328,7 +328,7 @@
     "conda install --yes numba root gsl\n",
     "# optionally\n",
     "conda install --yes jupyterlab ffmpeg gnuplot\n",
-    "conda install --yes geant4 cmake\n",
+    "#conda install --yes geant4 cmake # do not install for phys 56xx\n",
     "```"
    ]
   },
