--- a/notebooks/FAQ/WorkingEnv.ipynb
+++ b/notebooks/FAQ/WorkingEnv.ipynb
@@ -327,8 +327,8 @@
     "# n.b. installing ROOT also brings in a compatible C++ compiler and libs\n",
     "conda install --yes numba root gsl\n",
     "# optionally\n",
-    "conda install --yes jupyterlab ffmpeg gnuplot\n",
-    "#conda install --yes geant4 cmake # do not install for phys 56xx\n",
+    "conda install --yes jupyterlab ffmpeg\n",
+    "#conda install --yes gnuplot geant4 cmake # do not install for phys56xx, for gnuplot on Rivanna use module load gnuplot\n",
     "```"
    ]
   },
