--- a/notebooks/FAQ/VirtualBoxGuide.ipynb
+++ b/notebooks/FAQ/VirtualBoxGuide.ipynb
@@ -2,7 +2,13 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "source": [
     "# VirtualBox Guide\n",
     "\n",
@@ -111,7 +117,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -125,7 +131,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
